[fix] email template integration
